Fix misaligned bullets.

--- a/app/assets/stylesheets/components/_editorial.scss
+++ b/app/assets/stylesheets/components/_editorial.scss
@@ -87,7 +87,14 @@
     color: $color-green-tertiary;
     background-color: $color-callout-background;
 
-    @include respond-to(600px) {
+//    @include add-all-grid-spans(1, 1, 1/3, 1/3, 1/3);
+
+//    @include breakpoint($mq-m) {
+//      @include grid-span($mq-m-c * 1/3);
+//      margin: $bl*3;
+//    }
+
+    @include respond-to(700px) {
       margin: $bl*3;
       max-width: 38%;
     }
